# Head

- Implemented 0.0 as a format in the TEXT function
- RIGHT can now be applied to an array
- Fixed INDEX when passed zero as a row or column number when only one row or column wide
- Implemented the ISERR() function in ruby and in C

# 0.2.28 - 2014 June 16th

- Fixed a bug that would lead to some numbers being truncated to integers in the C version of the output

# 0.2.27 - 2014 June 16th

- named_references_to_keep and named_references_that_can_be_set_at_runtime can now refer to table names

# 0.2.26 - 2014 June 10th

- When pruning cells, now checks for circular references
- Added a better error message if expanding array formulae fails
- Now doesn't mistakenly inline sheet specific named references
- Made the array formula expansion more robust to mismatched array sizes

# 0.2.25 - 2014 May 23rd

- Implemented the LN function in ruby and C
- Tweaks to the array formulae code to try and speed it up
- Tightened dependency version numbers in gemspec to eliminate warnings when building gem

# 0.2.24 - 2014 May 16th

- Fixed the simplification of SUMIFS when it has errors as arguments

# 0.2.23 - 2014 May 7th

- Fixed the simplification of SUMIFS when a criteria is blank
- Fixed the conversion of INDEX formulae that return arrays when they are inside array formulae

# 0.2.22 - 2014 April 27th

- Implemented a reset method in the ruby code so can perform repeated calculations on the same instance (already implemented in the generated C code)
- Added named references to generated ruby code (already implemented in generated C code)
- Added settting to allow the inline_formulae_that_are_only_used_once method to be skipped

# 0.2.21 - 2014 April 27th

- Fix ruby version of SUMIFS to match number criteria against string check values (already fixed in C version)
- bin/excel_to_c and bin/excel_to_ruby options changed and added -n option to keep named references
- default behaviour when named_references_to_keep = :all but no named references is then to keep all cells
