@@ -110,6 +110,10 @@ class Table
   def all
     ast_for_area @area.excel_start, @area.excel_finish
   end
+
+  def data
+    ast_for_area @data_area.excel_start, @data_area.excel_finish
+  end
   
   def ast_for_area(start,finish)
     [:sheet_reference,@worksheet,[:area,start.to_sym,finish.to_sym]]
